Add tests for metrics
- updated .gitignore
- added requirements for test
- added bootstrap and test scripts
- code style flake8 check
- test Authentication set correctly
- test the metrics Counters and Histograms are called correctly
- test that response is compressed if gzip in header

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,18 @@
+# Distribution / packaging
 __pycache__/
 *.py[cod]
 *.egg-info/
+build
+dist
+
+# Unit test / coverage reports
+.cache
+.coverage
+coverage.xml
+cache
+htmlcov/
+test_results.xml
+venv
+
+# secrets
+environment.sh
