--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Distribution / packaging
+.eggs
 __pycache__/
 *.py[cod]
 *.egg-info/
@@ -8,6 +9,7 @@ dist
 # Unit test / coverage reports
 .cache
 .coverage
+.tox/
 coverage.xml
 cache
 htmlcov/
