cleanup dev/test process
 # remove tox

since we're using travis we can make travis run the matrix of tests

 # replace bootstrap and run_test scripts

they were unnecessary and overcomplicated. just list the pip install,
flake8 and pytest commands in the travis file

 # remove references to venv in makefile

so you can manage your own virtualenv, which might not be in the local
directory

also add vscode stuff to gitignore

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 language: python
 python:
-- '3.5'
+- "3.5"
+- "3.6"
+- "3.7"
+- "3.8"
 cache: pip
 install:
-- ./scripts/bootstrap.sh
+- pip install -r requirements-test.txt
 - pip install coveralls
 script:
-- ./scripts/run_tests.sh
+- flake8
+- pytest
 after_success:
 - coveralls
