--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
 env:
 - PROMETHEUS_CLIENT_VERSION="0.2.*"
 - PROMETHEUS_CLIENT_VERSION="0.4.*"
+- PROMETHEUS_CLIENT_VERSION="0.8.*"
 cache: pip
 install:
 - pip install -r requirements-test.txt
