--- a/setup.cfg
+++ b/setup.cfg
@@ -2,5 +2,5 @@
 test=pytest
 
 [tool:pytest]
-addopts = --verbose --cov=gds_metrics --cov-report=term-missing 
+addopts = --verbose
 python_files = tests/**
